test/driver/repl-compile-error.delta
// RUN: cat %s | %delta | %FileCheck %s

// CHECK: error: invalid operands 'int' and 'bool' to '=='
42 == true

// CHECK: error: unknown identifier 'foo'
foo

// CHECK: error: unexpected '?'
?
